--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ sourceSets {
 tasks.withType(JavaCompile){
 	options.encoding = 'UTF-8'
 }
- 
+
 mainClassName='begyyal.trading.Entrypoint'
 
 javafx {
@@ -53,10 +53,10 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
-delete('META-INF/')
+delete('main/resources/META-INF/')
 copy {
-	from '../LICENSE'
-	into 'META-INF/'
+	from 'LICENSE'
+	into 'main/resources/META-INF/'
 }
 
 jar {
@@ -84,7 +84,7 @@ FileTree zipTreeByCustom(File f){
 	def pjdirLayerLength = getLayerArr(getProjectDir().toString()).length
 	def metainfLayers = Arrays.copyOfRange(getLayerArr(meta.iterator().next().toString()), pjdirLayerLength, pjdirLayerLength + 5)
 	def metainfRelPath = String.join('/', metainfLayers)
-	def newMetainfRelPath =  'META-INF/' + keyStr
+	def newMetainfRelPath =  'main/resources/META-INF/' + keyStr
 	
 	copy {
 		into newMetainfRelPath
