--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ java {
 
 dependencies {
 	implementation files('jar/xj_commons.jar')
+	implementation files('jar/xj_web.jar')
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
